fix：gradle 版本升级，修复相关编译错误